# swagger.yaml
@@ -14,7 +14,11 @@ tags:
     description: Endpoints for B2C
   - name: Admin
     description: Endpoints for Admin
-
+securityDefinitions:
+  BearerAuth:
+    type: apiKey
+    name: authorization
+    in: header
 paths:
   /b2c/sign-up:
     post:
@@ -416,3 +420,27 @@ paths:
             properties:
               error:
                 type: string
+
+  /admin/teachers-list:
+    get:
+      tags:
+        - Admin
+      summary: Authenticate an admin user
+      consumes:
+        - application/json
+      produces:
+        - application/json
+
+      security:
+        - BearerAuth: []
+
+      parameters:
+        - name: authorization
+          in: header
+          description: Bearer Token
+          required: true
+          type: string
+
+      responses:
+        401:
+          description: Invalid Token
